fix(Footer/Layout): :bug: Fixed footer/full height spacing and keeping footer on bottom even when pages are short
Removed some of my previous janky code and basically just went with the class flex flex-col and flex-1 on the main tag on each layout page.

footer doesn't float on other screen sizes now :)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -361,7 +361,7 @@ body,
 
 /* For WebKit-based browsers (Chrome, Safari, Edge) */
 .scrollable::-webkit-scrollbar {
-  width: 1em;
+  width: 0.75em;
   height: 1em; /* if you also want horizontal scrollbars */
 }
 
